--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "homepage": "https://ABoklogov.github.io/goit-js-hw-10-food-service",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url /goit-js-hw-10-food-service/",
+    "dev": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
@@ -24,10 +24,11 @@
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
-    "posthtml-include": "^1.6.2",
+    "posthtml-include": "^1.7.1",
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "gh-pages": "^3.2.0"
+    "gh-pages": "^3.2.0",
+    "material-icons": "^0.6.4"
   }
 }
